# reside-anywhere-singleton

./: CMakeLists.txt  README.md  logging_resource.cpp  logging_resource.hpp  main.cpp  singleton.hpp  the_one_true_foo.cpp  the_one_true_foo.hpp
